Mongoose conection and user CRUD endpoints

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.2",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
